# gQSL

./: .gitignore  README.md  logs.json  meson.build
data/: meson.build  org.example.gqsl.gschema.xml  style.css
include/: adif_handler.h  gui.h  log_entry_object.h  log_manager.h  preferences.h
platform/linux/: platform_linux.c
platform/macos/: devnotes  platform.c  platform.h  platform_mac.c  platform_mac.h
platform/windows/: platform.c  platform_windows.c
src/: adif_handler.c  gui.c  log_entry_object.c  log_manager.c  main.c  preferences.c
tests/: test  test.c
